[lgthinq][Feat] Introducing of Washin Machine support. Only monitoring for now. No Channel added
Signed-off-by: nemerdaud <nemer.daud@gmail.com>
Signed-off-by: Nemer Daud <nemer@smartsw.com.br>